--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/GeneralCommon.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/GeneralCommon.cshtml
@@ -424,7 +424,7 @@
             </td>
         </tr>
 		<tr>
-			<td colspan="2">
+			<td class="adminSeparator" colspan="2">
 				<hr />
 			</td>
 		</tr>
@@ -520,9 +520,9 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2">
-                <hr />
-            </td>
+			<td class="adminSeparator" colspan="2">
+				<hr />
+			</td>
         </tr>
         <tr>
             <td class="adminTitle">
@@ -638,9 +638,9 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2">
-                <hr />
-            </td>
+			<td class="adminSeparator" colspan="2">
+				<hr />
+			</td>
         </tr>
         <tr>
             <td class="adminTitle">
@@ -669,9 +669,6 @@
                 @Html.ValidationMessageFor(model => model.CompanyInformationSettings.TaxNumber)
             </td>
         </tr>
-
-
-
     </table>
 }
 
@@ -716,9 +713,9 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2">
-                <hr />
-            </td>
+			<td class="adminSeparator" colspan="2">
+				<hr />
+			</td>
         </tr>
         <tr>
             <td class="adminTitle">
@@ -757,9 +754,9 @@
             </td>
         </tr>
         <tr>
-            <td colspan="2">
-                <hr />
-            </td>
+			<td class="adminSeparator" colspan="2">
+				<hr />
+			</td>
         </tr>
         <tr>
             <td class="adminTitle">
