--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/ShoppingCart.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/ShoppingCart.cshtml
@@ -1,6 +1,5 @@
 ﻿@model ShoppingCartSettingsModel
 @{
-    //page title
     ViewBag.Title = T("Admin.Configuration.Settings.ShoppingCart").Text;
 }
 @using (Html.BeginForm())
@@ -142,8 +141,8 @@
             </td>
         </tr>
 
-        <tr class="adminSeparator">
-            <td colspan="2">
+        <tr>
+            <td class="adminSeparator" colspan="2">
                 <hr />
             </td>
         </tr>
@@ -176,10 +175,10 @@
             </td>
         </tr>
 
-        <tr class="adminSeparator">
-            <td colspan="2">
-                <hr />
-            </td>
+        <tr>
+			<td class="adminSeparator" colspan="2">
+				<hr />
+			</td>
         </tr>
 
         <tr>
