--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Tax.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Tax.cshtml
@@ -1,7 +1,6 @@
 ﻿@model TaxSettingsModel
 @using Telerik.Web.Mvc.UI;
 @{
-    //page title
     ViewBag.Title = T("Admin.Configuration.Settings.Tax").Text;
 }
 @using (Html.BeginForm())
@@ -150,11 +149,6 @@
                 @Html.ValidationMessageFor(model => model.HideTaxInOrderSummary)
             </td>
         </tr>
-        <tr class="adminSeparator">
-            <td colspan="2">
-                <hr />
-            </td>
-        </tr>
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.ShowLegalHintsInProductList)
@@ -182,8 +176,8 @@
                 @Html.ValidationMessageFor(model => model.ShowLegalHintsInFooter)
             </td>
         </tr>
-        <tr class="adminSeparator">
-            <td colspan="2">
+        <tr>
+            <td class="adminSeparator" colspan="2">
                 <hr />
             </td>
         </tr>
@@ -197,21 +191,21 @@
                 @Html.ValidationMessageFor(model => model.TaxBasedOn)
             </td>
         </tr>
-        <tr>
+        <tr class="adminGroup">
             <td class="adminTitle">
-                @Html.LabelFor(model => model.DefaultTaxAddress, new { style="font-weight: bold" })
+                @Html.SmartLabelFor(model => model.DefaultTaxAddress)
             </td>
 			<td class="adminData">
 				@Html.SettingOverrideCheckbox(model => Model.DefaultTaxAddress, "#pnlDefaultTaxAddress")
 			</td>
         </tr>
         <tr>
-            <td colspan="2" id="pnlDefaultTaxAddress">
+            <td id="pnlDefaultTaxAddress" colspan="2">
                 @Html.EditorFor(x => x.DefaultTaxAddress, "Address")
             </td>
         </tr>
-        <tr class="adminSeparator">
-            <td colspan="2">
+        <tr>
+            <td class="adminSeparator" colspan="2">
                 <hr />
             </td>
         </tr>
@@ -243,8 +237,8 @@
                 @Html.ValidationMessageFor(model => model.ShippingTaxClassId)
             </td>
         </tr>
-        <tr class="adminSeparator">
-            <td colspan="2">
+        <tr>
+            <td class="adminSeparator" colspan="2">
                 <hr />
             </td>
         </tr>
@@ -276,8 +270,8 @@
                 @Html.ValidationMessageFor(model => model.PaymentMethodAdditionalFeeTaxClassId)
             </td>
         </tr>
-        <tr class="adminSeparator">
-            <td colspan="2">
+        <tr>
+            <td class="adminSeparator" colspan="2">
                 <hr />
             </td>
         </tr>
@@ -336,6 +330,5 @@
                 @Html.ValidationMessageFor(model => model.VatRequired)
             </td>
         </tr>
-        
     </table>
 }
