Product import: Store mappings were not applied when inserting new records

--- a/src/Presentation/SmartStore.Web/Administration/Views/Import/_ColumnMappings.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Import/_ColumnMappings.cshtml
@@ -1,6 +1,6 @@
 ﻿@using SmartStore.Admin.Models.DataExchange;
 @model ImportProfileModel
-@if (Model.ColumnMappings.Any())
+@if (Model.ColumnMappings != null && Model.ColumnMappings.Any())
 {
 	<p>&nbsp;</p>
 
