--- a/src/Plugins/SmartStore.GoogleMerchantCenter/Views/FeedGoogleMerchantCenter/Configure.cshtml
+++ b/src/Plugins/SmartStore.GoogleMerchantCenter/Views/FeedGoogleMerchantCenter/Configure.cshtml
@@ -3,7 +3,6 @@
 @using SmartStore.GoogleMerchantCenter.Models;
 @using SmartStore.GoogleMerchantCenter.Providers;
 @using SmartStore.Web.Framework;
-@using SmartStore.Web.Framework.Plugins;
 @using Telerik.Web.Mvc.UI;
 @using SmartStore.Web.Framework.UI;
 
@@ -53,7 +52,8 @@
 							@Html.SmartLabelFor(m => m.SearchIsTouched)
 						</td>
 						<td class="adminData">
-							@Html.DropDownList("SearchIsTouched", new List<SelectListItem> {
+							@Html.DropDownList("SearchIsTouched", new List<SelectListItem>
+							{
 								new SelectListItem { Text = T("Common.Unspecified"), Value = "" },
 								new SelectListItem { Text = T("Plugins.Feed.Froogle.SearchIsTouched.Touched"), Value = "touched" },
 								new SelectListItem { Text = T("Plugins.Feed.Froogle.SearchIsTouched.Untouched"), Value = "untouched" }
@@ -82,25 +82,56 @@
 					})
 					.Columns(c =>
 					{
-						c.Bound(x => x.ProductId).ReadOnly().Visible(false);
+						c.Bound(x => x.ProductId)
+							.ReadOnly()
+							.Visible(false);
 						c.Bound(x => x.Name)
-							.ReadOnly().Visible(true).Width(420)
+							.ReadOnly().Visible(true)
 							.Template(x => @Html.LabeledProductName(x.ProductId, x.Name, x.ProductTypeName, x.ProductTypeLabelHint))
 							.ClientTemplate(@Html.LabeledProductName("ProductId", "Name"));
-						c.Bound(x => x.SKU).ReadOnly().Visible(true);
-						c.Bound(x => x.Exporting).ClientTemplate(Html.XEditableLink("Exporting", "select2"));
-						c.Bound(x => x.Taxonomy).ClientTemplate(Html.XEditableLink("Taxonomy", "typeahead"));
-						c.Bound(x => x.Gender).ClientTemplate(Html.XEditableLink("Gender", "select2")).Width(100);
-						c.Bound(x => x.AgeGroup).ClientTemplate(Html.XEditableLink("AgeGroup", "select2")).Width(100);
-						c.Bound(x => x.Color).ClientTemplate(Html.XEditableLink("Color", "text"));
-						c.Bound(x => x.Size).ClientTemplate(Html.XEditableLink("Size", "text"));
-						c.Bound(x => x.Material).ClientTemplate(Html.XEditableLink("Material", "text"));
-						c.Bound(x => x.Pattern).ClientTemplate(Html.XEditableLink("Pattern", "text"));
+						c.Bound(x => x.SKU)
+							.ReadOnly()
+							.Visible(true);
+						c.Bound(x => x.Export2)
+							.ClientTemplate(Html.XEditableLink("Export2", "select2"));
+						c.Bound(x => x.Taxonomy)
+							.ClientTemplate(Html.XEditableLink("Taxonomy", "typeahead"));
+						c.Bound(x => x.Gender)
+							.ClientTemplate(Html.XEditableLink("Gender", "select2"));
+						c.Bound(x => x.AgeGroup)
+							.ClientTemplate(Html.XEditableLink("AgeGroup", "select2"));
+						c.Bound(x => x.IsAdult)
+							.ClientTemplate(Html.XEditableLink("IsAdult", "select2"));
+						c.Bound(x => x.Color)
+							.ClientTemplate(Html.XEditableLink("Color", "text"));
+						c.Bound(x => x.Size)
+							.ClientTemplate(Html.XEditableLink("Size", "text"));
+						c.Bound(x => x.Material)
+							.ClientTemplate(Html.XEditableLink("Material", "text"));
+						c.Bound(x => x.Pattern)
+							.ClientTemplate(Html.XEditableLink("Pattern", "text"));
+						c.Bound(x => x.Multipack2)
+							.ClientTemplate(Html.XEditableLink("Multipack2", "text"));
+						c.Bound(x => x.IsBundle)
+							.ClientTemplate(Html.XEditableLink("IsBundle", "select2"));
+						c.Bound(x => x.EnergyEfficiencyClass)
+							.ClientTemplate(Html.XEditableLink("EnergyEfficiencyClass", "select2"));
+						c.Bound(x => x.CustomLabel0)
+							.ClientTemplate(Html.XEditableLink("CustomLabel0", "text"));
+						c.Bound(x => x.CustomLabel1)
+							.ClientTemplate(Html.XEditableLink("CustomLabel1", "text"));
+						c.Bound(x => x.CustomLabel2)
+							.ClientTemplate(Html.XEditableLink("CustomLabel2", "text"));
+						c.Bound(x => x.CustomLabel3)
+							.ClientTemplate(Html.XEditableLink("CustomLabel3", "text"));
+						c.Bound(x => x.CustomLabel4)
+							.ClientTemplate(Html.XEditableLink("CustomLabel4", "text"));
 					})
 					.ClientEvents(e =>
 					{
 						e.OnDataBound("OnGridDataBound");
 						e.OnDataBinding("OnGridDataBinding");
+						e.OnError("OnGridError");
 					})
 					.DataBinding(dataBinding =>
 					{
@@ -127,6 +158,11 @@
 		return false;
 	});
 
+	function OnGridError(e) {
+		e.preventDefault();
+		alert(e.XMLHttpRequest.responseText);
+	}
+
 	function OnGridDataBinding(e) {
 		e.data = {
 			searchProductName: $('#SearchProductName').val(),
@@ -135,28 +171,32 @@
 	}
 
 	function OnGridDataBound(e) {
-		var grid = $('#gmc-products-grid'),
-			options = {
-				emptytext: '@T("Plugins.Feed.Froogle.EmptyGridCell")',
-				url: '@Url.Action("GoogleProductEdit", "FeedGoogleMerchantCenter", new { Namespaces = "SmartStore.GoogleMerchantCenter.Controllers", area = GoogleMerchantCenterFeedPlugin.SystemName })'
-			},
-			select2Options = {
-				placeholder: '@T("Plugins.Feed.Froogle.EmptyGridCell")',
-				minimumResultsForSearch: 20,
-				allowClear: true
-			};
+		var grid = $('#gmc-products-grid');
 
-		grid.find('a.edit-link-exporting').editable($.extend(options, {
+		var emptyCell = '@T("Plugins.Feed.Froogle.EmptyGridCell")';
+
+		var options = {
+			emptytext: emptyCell,
+			url: '@Url.Action("GoogleProductEdit", "FeedGoogleMerchantCenter", new { Namespaces = "SmartStore.GoogleMerchantCenter.Controllers", area = GoogleMerchantCenterFeedPlugin.SystemName })'
+		};
+		var select2Options = {
+			placeholder: emptyCell,
+			minimumResultsForSearch: 20,
+			allowClear: true
+		};
+		var boolSource = [
+			{ id: 'true', text: '@T("Admin.Common.Yes")' },
+			{ id: 'false', text: '@T("Admin.Common.No")' }
+		];
+
+		grid.find('a.edit-link-export2').editable($.extend({}, options, {
 			select2: {
 				minimumResultsForSearch: 20
 			},
-			source: [
-				{ id: 'true', text: '@T("Admin.Common.Yes")' },
-				{ id: 'false', text: '@T("Admin.Common.No")' }
-			]
+			source: boolSource
 		}));
 
-		grid.find('a.edit-link-gender').editable($.extend(options, {
+		grid.find('a.edit-link-gender').editable($.extend({}, options, {
 			select2: select2Options,
 			source: [
 				{ id: 'male', text: '@T("Plugins.Feed.Froogle.GenderMale")' },
@@ -165,12 +205,17 @@
 			]
 		}));
 
-		grid.find('a.edit-link-agegroup').editable($.extend(options, {
+		grid.find('a.edit-link-agegroup').editable($.extend({}, options, {
 			select2: select2Options,
 			source: [
 				{ id: 'adult', text: '@T("Plugins.Feed.Froogle.AgeGroupAdult").Text' },
 				{ id: 'kids', text: '@T("Plugins.Feed.Froogle.AgeGroupKids").Text' }
 			]
+		}));
+
+		grid.find('a.edit-link-isadult').editable($.extend({}, options, {
+			select2: select2Options,
+			source: boolSource
 		}));
 
 		grid.find('a.edit-link-color').editable(options);
@@ -181,7 +226,46 @@
 
 		grid.find('a.edit-link-pattern').editable(options);
 
-		grid.find('a.edit-link-taxonomy').editable($.extend(options, {
+		grid.find('a.edit-link-multipack2').editable($.extend({}, options, {
+			validate: function(value) {
+				if (value.length !== 0) {
+					var regex = /^[0-9]+$/;
+					if (!regex.test(value)) {
+						return '@T("Admin.System.Warnings.DigitsOnly")';
+					}
+				}
+				return null;
+			}
+		}));
+
+		grid.find('a.edit-link-isbundle').editable($.extend({}, options, {
+			select2: select2Options,
+			source: boolSource
+		}));
+
+		grid.find('a.edit-link-energyefficiencyclass').editable($.extend({}, options, {
+			select2: select2Options,
+			source: [
+				@if (Model.EnergyEfficiencyClasses != null && Model.EnergyEfficiencyClasses.Length > 0)
+					{
+						foreach (var str in Model.EnergyEfficiencyClasses.Select(x => x.Replace("'", "\"")))
+						{
+							<text>{ id: '@str', text: '@str' },</text>
+						}
+					}
+			]
+		}));
+
+		grid.find('a.edit-link-customlabel0').editable(options);
+		grid.find('a.edit-link-customlabel1').editable(options);
+		grid.find('a.edit-link-customlabel2').editable(options);
+		grid.find('a.edit-link-customlabel3').editable(options);
+		grid.find('a.edit-link-customlabel4').editable(options);
+
+		grid.find('a.edit-link-taxonomy').editable($.extend({}, options, {
+			select2: {
+				minimumResultsForSearch: 20
+			},
 			source: @Html.Raw(Model.AvailableGoogleCategoriesAsJson)
 		}));
 	}
