--- a/src/Presentation/SmartStore.Web/Administration/Views/Category/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Category/List.cshtml
@@ -17,7 +17,7 @@
     </div>
 </div>
 
-<table>
+<table class="adminContent">
     <tr>
         <td class="adminTitle">
             @Html.SmartLabelFor(model => model.SearchCategoryName)
@@ -34,14 +34,17 @@
             @Html.EditorFor(model => Model.SearchAlias)
         </td>
     </tr>
-	<tr>
-		<td class="adminTitle">
-			@Html.SmartLabelFor(model => model.SearchStoreId)
-		</td>
-		<td class="adminData">
-			@Html.DropDownList("SearchStoreId", Model.AvailableStores)
-		</td>
-	</tr>
+	@if (Model.AvailableStores.Count > 1)
+	{
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.SearchStoreId)
+			</td>
+			<td class="adminData">
+				@Html.DropDownList("SearchStoreId", Model.AvailableStores, T("Admin.Common.All"))
+			</td>
+		</tr>
+	}
     <tr>
 		<td class="adminTitle">
 			&nbsp;
@@ -88,6 +91,7 @@
 							.Width(160)
 							.Template(item => @Html.SymbolForBool(item.LimitedToStores))
 							.ClientTemplate(@Html.SymbolForBool("LimitedToStores"))
+							.Hidden(Model.AvailableStores.Count <= 1)
 							.Centered();
 					})
 					.Pageable(settings => settings.PageSize(Model.GridPageSize).Position(GridPagerPosition.Both))
