--- a/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Manufacturer/List.cshtml
@@ -19,23 +19,35 @@
 		@Html.Widget("admin_button_toolbar_after")
     </div>
 </div>
-<table width="100%">
-    <tr>
-        <td class="adminTitle">
-            @Html.SmartLabelFor(model => model.SearchManufacturerName)
-        </td>
-        <td class="adminData">
-            @Html.EditorFor(model => Model.SearchManufacturerName)
-        </td>
-    </tr>
-    <tr>
+
+<table class="adminContent">
+	<tr>
+		<td class="adminTitle">
+			@Html.SmartLabelFor(model => model.SearchManufacturerName)
+		</td>
+		<td class="adminData">
+			@Html.EditorFor(model => Model.SearchManufacturerName)
+		</td>
+	</tr>
+	@if (Model.AvailableStores.Count > 1)
+	{
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.SearchStoreId)
+			</td>
+			<td class="adminData">
+				@Html.DropDownListFor(model => model.SearchStoreId, Model.AvailableStores, T("Admin.Common.All"))
+			</td>
+		</tr>
+	}
+	<tr>
 		<td class="adminTitle">
 			&nbsp;
 		</td>
-        <td class="adminData">
-            <button type="submit" id="btnSearch" class="btn"><i class="fa fa-search"></i>&nbsp;@T("Admin.Common.Search")</button>
-        </td>
-    </tr>
+		<td class="adminData">
+			<button type="submit" id="btnSearch" class="btn"><i class="fa fa-search"></i>&nbsp;@T("Admin.Common.Search")</button>
+		</td>
+	</tr>
 </table>
 
 <p></p>
@@ -57,11 +69,9 @@
 							.HtmlAttributes(new { style = "text-align:center" })
 							.HeaderHtmlAttributes(new { style = "text-align:center" });
 						columns.Bound(x => x.Name)
-							.Template(x => Html.ActionLink(x.Name, "Edit", new { id = x.Id }))
 							.ClientTemplate("<a href=\"Edit/<#= Id #>\"><#= Name #></a>");
 						columns.Bound(x => x.Published)
 							.Width(160)
-							.Template(item => @Html.SymbolForBool(item.Published))
 							.ClientTemplate(@Html.SymbolForBool("Published"))
 							.Centered();
 						columns.Bound(x => x.DisplayOrder)
@@ -69,8 +79,8 @@
 							.Centered();
 						columns.Bound(x => x.LimitedToStores)
 							.Width(160)
-							.Template(item => @Html.SymbolForBool(item.LimitedToStores))
 							.ClientTemplate(@Html.SymbolForBool("LimitedToStores"))
+							.Hidden(Model.AvailableStores.Count <= 1)
 							.Centered();
 					})
 					.Pageable(settings => settings.PageSize(Model.GridPageSize).Position(GridPagerPosition.Both))
@@ -129,7 +139,8 @@
 
     function onDataBinding(e) {
         var searchModel = {
-            SearchManufacturerName: $('#@Html.FieldIdFor(model => model.SearchManufacturerName)').val()
+        	SearchManufacturerName: $('#@Html.FieldIdFor(model => model.SearchManufacturerName)').val(),
+        	SearchStoreId: $('#@Html.FieldIdFor(model => model.SearchStoreId)').val()
         };
         e.data = searchModel;
     }
