--- a/src/Presentation/SmartStore.Web/Administration/Views/News/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/News/List.cshtml
@@ -25,26 +25,29 @@
     </div>
 </div>
 
-<table width="100%">
-    <tr>
-        <td class="adminTitle">
-            @Html.SmartLabelFor(model => model.SearchStoreId)
-        </td>
-        <td class="adminData">
-            @Html.DropDownList("SearchStoreId", Model.AvailableStores)
-        </td>
-    </tr>
-    <tr>
-        <td class="adminTitle">
-			&nbsp;
-		</td>
-		<td class="adminData">
-			<button type="button" id="search-newsitem" class="btn">
-				<i class="fa fa-search"></i>&nbsp;@T("Admin.Common.Search")
-			</button>
-        </td>
-    </tr>
-</table>
+@if (Model.AvailableStores.Count > 1)
+{
+	<table class="adminContent">
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.SearchStoreId)
+			</td>
+			<td class="adminData">
+				@Html.DropDownList("SearchStoreId", Model.AvailableStores, T("Admin.Common.All"))
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				&nbsp;
+			</td>
+			<td class="adminData">
+				<button type="button" id="search-newsitem" class="btn">
+					<i class="fa fa-search"></i>&nbsp;@T("Admin.Common.Search")
+				</button>
+			</td>
+		</tr>
+	</table>
+}
 
 <p></p>
 
@@ -81,6 +84,7 @@
 						columns.Bound(x => x.LimitedToStores)
 							.Template(item => @Html.SymbolForBool(item.LimitedToStores))
 							.ClientTemplate(@Html.SymbolForBool("LimitedToStores"))
+							.Hidden(Model.AvailableStores.Count <= 1)
 							.Centered();
                         columns.Bound(x => x.CreatedOn);
                     })
