--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/ProductAttributeValueLinkagePopup.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/ProductAttributeValueLinkagePopup.cshtml
@@ -34,7 +34,7 @@
 
     @Html.HiddenFor(model => model.ProductId)
 	
-    <table width="100%">
+    <table class="adminContent">
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.SearchProductName)
@@ -48,7 +48,7 @@
                 @Html.SmartLabelFor(model => model.SearchCategoryId)
             </td>
             <td class="adminData">
-                @Html.DropDownList("SearchCategoryId", Model.AvailableCategories, T("Admin.Common.All").Text)
+                @Html.DropDownList("SearchCategoryId", Model.AvailableCategories, T("Admin.Common.All"))
             </td>
         </tr>
         <tr>
@@ -56,23 +56,26 @@
                 @Html.SmartLabelFor(model => model.SearchManufacturerId)
             </td>
             <td class="adminData">
-                @Html.DropDownList("SearchManufacturerId", Model.AvailableManufacturers, T("Admin.Common.All").Text)
+                @Html.DropDownList("SearchManufacturerId", Model.AvailableManufacturers, T("Admin.Common.All"))
             </td>
         </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.SearchStoreId)
-            </td>
-            <td class="adminData">
-                @Html.DropDownList("SearchStoreId", Model.AvailableStores)
-            </td>
-        </tr>
+		@if (Model.AvailableStores.Count > 1)
+		{
+			<tr>
+				<td class="adminTitle">
+					@Html.SmartLabelFor(model => model.SearchStoreId)
+				</td>
+				<td class="adminData">
+					@Html.DropDownList("SearchStoreId", Model.AvailableStores, T("Admin.Common.All"))
+				</td>
+			</tr>
+		}
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.SearchProductTypeId)
             </td>
             <td class="adminData">
-                @Html.DropDownList("SearchProductTypeId", Model.AvailableProductTypes)
+                @Html.DropDownList("SearchProductTypeId", Model.AvailableProductTypes, T("Admin.Common.All"))
             </td>
         </tr>
         <tr>
