--- a/src/Presentation/SmartStore.Web/Administration/Views/Product/RelatedProductAddPopup.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Product/RelatedProductAddPopup.cshtml
@@ -5,7 +5,6 @@
 @{
     var gridPageSize = EngineContext.Current.Resolve<SmartStore.Core.Domain.Common.AdminAreaSettings>().GridPageSize;
 
-    //page title
     ViewBag.Title = T("Admin.Catalog.Products.RelatedProducts.AddNew").Text;
 }
 @using Telerik.Web.Mvc.UI;
@@ -26,8 +25,7 @@
     </script>
     }
 
-    
-    <table width="100%">
+    <table class="adminContent">
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.SearchProductName)
@@ -41,7 +39,7 @@
                 @Html.SmartLabelFor(model => model.SearchCategoryId)
             </td>
             <td class="adminData">
-                @Html.DropDownList("SearchCategoryId", Model.AvailableCategories, T("Admin.Common.All").Text)
+                @Html.DropDownList("SearchCategoryId", Model.AvailableCategories, T("Admin.Common.All"))
             </td>
         </tr>
         <tr>
@@ -49,23 +47,26 @@
                 @Html.SmartLabelFor(model => model.SearchManufacturerId)
             </td>
             <td class="adminData">
-                @Html.DropDownList("SearchManufacturerId", Model.AvailableManufacturers, T("Admin.Common.All").Text)
+                @Html.DropDownList("SearchManufacturerId", Model.AvailableManufacturers, T("Admin.Common.All"))
             </td>
         </tr>
-        <tr>
-            <td class="adminTitle">
-                @Html.SmartLabelFor(model => model.SearchStoreId)
-            </td>
-            <td class="adminData">
-                @Html.DropDownList("SearchStoreId", Model.AvailableStores)
-            </td>
-        </tr>
+		@if (Model.AvailableStores.Count > 1)
+		{
+			<tr>
+				<td class="adminTitle">
+					@Html.SmartLabelFor(model => model.SearchStoreId)
+				</td>
+				<td class="adminData">
+					@Html.DropDownList("SearchStoreId", Model.AvailableStores, T("Admin.Common.All"))
+				</td>
+			</tr>
+		}
         <tr>
             <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.SearchProductTypeId)
             </td>
             <td class="adminData">
-                @Html.DropDownList("SearchProductTypeId", Model.AvailableProductTypes)
+                @Html.DropDownList("SearchProductTypeId", Model.AvailableProductTypes, T("Admin.Common.All"))
             </td>
         </tr>
         <tr>
@@ -77,6 +78,7 @@
             </td>
         </tr>
     </table>
+
     <p></p>
     
     <table class="adminContent">
