--- a/src/Presentation/SmartStore.Web/Administration/Views/Topic/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Topic/List.cshtml
@@ -16,26 +16,29 @@
     </div>
 </div>
 
-<table class="adminContent">
-    <tr>
-        <td class="adminTitle">
-            @Html.SmartLabelFor(model => model.SearchStoreId)
-        </td>
-        <td class="adminData">
-            @Html.DropDownList("SearchStoreId", Model.AvailableStores)
-        </td>
-    </tr>
-    <tr>
-        <td class="adminTitle">
-			&nbsp;
-		</td>
-		<td class="adminData">
-			<button type="button" id="search-topics" class="btn">
-				<i class="fa fa-search"></i>&nbsp;@T("Admin.Common.Search")
-			</button>
-        </td>
-    </tr>
-</table>
+@if (Model.AvailableStores.Count > 1)
+{
+	<table class="adminContent">
+		<tr>
+			<td class="adminTitle">
+				@Html.SmartLabelFor(model => model.SearchStoreId)
+			</td>
+			<td class="adminData">
+				@Html.DropDownList("SearchStoreId", Model.AvailableStores, T("Admin.Common.All"))
+			</td>
+		</tr>
+		<tr>
+			<td class="adminTitle">
+				&nbsp;
+			</td>
+			<td class="adminData">
+				<button type="button" id="search-topics" class="btn">
+					<i class="fa fa-search"></i>&nbsp;@T("Admin.Common.Search")
+				</button>
+			</td>
+		</tr>
+	</table>
+}
 
 <p></p>
 
