Resolves #790 Improve language editing

--- a/src/Presentation/SmartStore.Web/Administration/Content/admin.less
+++ b/src/Presentation/SmartStore.Web/Administration/Content/admin.less
@@ -432,6 +432,21 @@ td.adminData > input[type="checkbox"] {
     min-width: 314px; /* ensures more clean look & feel */
 }
 
+.select2-image-item {
+	img {
+		margin-bottom: 3px;
+	}
+	span:not(.select2-icon) {
+		padding-left: 5px;
+	}
+	.icon-container {
+		float: left;
+		display: inline-block;
+		width: 16px;
+		min-width: 16px;
+		max-width: 16px;
+	}
+}
 
 /* select2 with large, templated items
 -------------------------------------------------------------- */
